--- a/email_template.html
+++ b/email_template.html
@@ -1,1 +1,12 @@
-<p>email teste</p>
+Olá, participante!
+
+Apesar da demora, nós do DAAL estamos enviando, neste email, o seu certificado de participação no UPDATE 2019 (PARTICIPANTE). O certificado segue em anexo.
+
+Nos desculpamos, novamente, pelo atraso considerável e justificamos que não é de nossa índole esse tipo de acontecido. No entanto, nos últimos meses, nosso diretório sofreu com uma série de desligamentos de vários diretores, o que sobrecarregou os demais. 
+
+Deixamos claro que, numa próxima oportunidade, esse erro não se repetirá.
+
+Agradecemos sua participação e paciência e esperamos poder contar com você em outras atividades do DAAL.
+
+Atenciosamente,
+Diretório Acadêmico Ada Lovelace.
