--- a/email_template.html
+++ b/email_template.html
@@ -1,12 +1,14 @@
-Olá, participante!
+Olá,
 
-Apesar da demora, nós do DAAL estamos enviando, neste email, o seu certificado de participação no UPDATE 2019 (PARTICIPANTE). O certificado segue em anexo.
+Apesar da demora, enviamos neste email seu(s) certificado(s) de participação no UPDATE 2019. 
 
-Nos desculpamos, novamente, pelo atraso considerável e justificamos que não é de nossa índole esse tipo de acontecido. No entanto, nos últimos meses, nosso diretório sofreu com uma série de desligamentos de vários diretores, o que sobrecarregou os demais. 
+Pedimos desculpas, pelo atraso considerável e afirmamos que esse tipo de acontecimento não é de nossa índole. No entanto, nos últimos meses, tivemos alguns problemas internos que acabaram nos sobrecarregando. 
 
-Deixamos claro que, numa próxima oportunidade, esse erro não se repetirá.
+Ratificamos que em uma próxima oportunidade esse erro não se repetirá.
 
 Agradecemos sua participação e paciência e esperamos poder contar com você em outras atividades do DAAL.
+
+Para sanar dúvidas ou resolver eventuais problemas entre em contato conosco através do email, redes sociais e nossos integrantes.
 
 Atenciosamente,
 Diretório Acadêmico Ada Lovelace.
